--- a/templates/fashionpointapp/signup.html
+++ b/templates/fashionpointapp/signup.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block body_block %}
     <link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/form.css' %}">
-    <div class="user">
-   <div id="formContent2">
+    <div class="user"  >
+   <div id="formContent2" style="max-width:500px;margin-bottom:50px;">
     <header class="user__header">
         <h2 class="active">Sign up</h2>
     </header>
