--- a/templates/fashionpointapp/newComments.html
+++ b/templates/fashionpointapp/newComments.html
@@ -1,7 +1,10 @@
 {% load staticfiles %}
 {% for p, a in comments %}
 <img style="width:50px;height:50px;box-shadow: none;border-radius: 20px;margin:-100px 550px -20px -25px;   animation:none;filter: none;" src="{{p.userPofile.picture.url}}">
-<span style="margin:-20px 0px 0px 20px;font-family: 'Poppins', sans-serif;font-size:14px;" id="username"> {{p.userPofile.user.first_name }}: </span>
+<span style="margin:-20px 0px 0px 20px;font-family: 'Poppins', sans-serif;font-size:14px;" id="username"> {{p.userPofile.user.first_name }}
+{% if p.userPofile.fashionista == True %}
+    ✓
+{% endif %}: </span>
 <label  style="margin:10px 0px 10px -40px;font-size:13px;" id ="comment"> {{ p.comment}} </label>
 <hr style="margin: 0px 0px 0px -10px;width:430px"/>
 <img id="like{{p}}" {% if a == 1%}
