--- a/templates/fashionpointapp/post_confirm_delete.html
+++ b/templates/fashionpointapp/post_confirm_delete.html
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
                 <a class="btn btn-outline-secondary" href="{% url 'show_post' object.id %}">Cancel</a>
-					<a1 class="btn btn-outline-secondary" href="{% url 'Post_Update' object.id %}">Update</a1>
+					<a1 class="btn btn-outline-secondary" href="{% url 'post_update' object.id %}">Update</a1>
             </div>
         </form>
     </div>
