--- a/templates/fashionpointapp/sitemap.html
+++ b/templates/fashionpointapp/sitemap.html
@@ -9,6 +9,6 @@
 {% block body_block %}
 	
 	<br />
-    <img src="{% static "images/sitemap.jpg"%}" />.
+    <img src="{% static "images/SITEMAP.png"%}" />.
 
 {% endblock %}
