--- a/templates/fashionpointapp/categories.html
+++ b/templates/fashionpointapp/categories.html
@@ -12,8 +12,9 @@
 {% block body_block %} 
 	<link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/form.css' %}">
 <div class="main">
-    <h1 id="white"> Categories </h1>
-
+<div id="formContent2" style="max-height:90px;max-width:960px;margin:50px 0px 50px 150px;text-align:top;background: #d0f8ff;" >
+	<label style="Color:Black; font-size:20px;font-family: 'Poppins', sans-serif; ">Categories
+	</label></div>
 <div class=whitehead id="everything" style="margin-bottom: 100px;">
     {% if categories %}
     {% for c in categories %}
