--- a/templates/fashionpointapp/edit_profile.html
+++ b/templates/fashionpointapp/edit_profile.html
@@ -21,7 +21,7 @@
         {% csrf_token %}
         {{ form.as_p }}
 
-		<input type="submit"" value="save" />
+		<input type="submit" value="save" />
        
 </form>
 
