--- a/templates/fashionpointapp/myaccount.html
+++ b/templates/fashionpointapp/myaccount.html
@@ -12,7 +12,7 @@
     <div class="user">
           <div id="formContent">
 
-<header style='margin: 0px 8px 0px 8px;' class="user__header">
+<header style='margin: 10px 8px 10px 8px;' class="user__header">
         <h2 class="active">{{user}}</h2>
     </header>
 <form  id="EditForm" method="view_profile" action="/fashionpoint/myaccount/"  enctype="multipart/form-data">
@@ -38,14 +38,14 @@
 	
 <div class="main">
     <h1 id="white"> {{ post.userPofile.user.first_name}} </h1>
-	<div class=whitehead id="everything" style="margin-bottom: 100px;">
+	<div class=whitehead id="everything" style="margin-bottom: 0px;max-width:600px;">
 	    {% for p in posts %}
 	                <a href="{% url 'show_post' p.id %}">
-	                		<div id="formContent2" style="margin-right:0px;max-width:400px;margin-bottom:10px;">
-	                			<p style="color:black;font-size: 24px;" >{{ p.description }}</p>
-								<p style="color:black;font-size: 24px;" >{{ p.avgRating }}</p>
-									<a class="btn btn-outline-secondary" href="{% url 'Post_Delete' p.id %}">Delete</a>
-										<input type="button"onclick="window.location.href='{% url 'post_update' p.id %}'" value="edit" />
+	                		<div id="formContent2" style="margin-right:0px;max-width:800px;margin-bottom:30px;">
+	                			<p style="color:black;font-size: 16px;" >{{ p.description }}</p>
+							<p style="color:black;font-size: 16px;" >{{ p.avgRating }}</p>
+							<a class="btn btn-outline-secondary" href="{% url 'Post_Delete' p.id %}">Delete</a>
+							<input type="button"onclick="window.location.href='{% url 'post_update' p.id %}'"value="Edit" />
 	                		</div>
 	                </a>
 	    {% endfor %}
