--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -58,7 +58,7 @@
                         <a href="{% url 'newpoll' %}">New Poll</a>
                         {% endif %}
 
-                        <a href="{% url 'view_profile'   %}">My Account</a>
+                        <a href="{% url 'view_profile' user.username  %}">My Account</a>
 						
           
                 		</div>
